src/App.css
.App {
  height: 100vh;
  display: flex;
  background-color: #192537;
  color: white;
  /* text-align: center; */
}

.Main {
  width: 75%;
  background: url(./assets/Quizillionaire.png) center;
  display: flex;
  flex-direction: column;
}

.MainTop {
  height: 50%;
  position: relative;
}

.Timer {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  border: 3px solid #e9e9e9;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  font-weight: 300;
  position: absolute;
  bottom: 10px;
  left: 48%;
}

.MainBottom {
  height: 50%;
}

.QuizContainer {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

.Question {
  width: 80%;
  background: linear-gradient(#425269, #192537);
  border: 2px solid #e9e9e9;
  text-align: center;
  padding: 20px;
  border-radius: 10px;
  font-size: 20px;
  font-weight: 300;
}

.Answers {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.Answer {
  width: 40%;
  padding: 10px;
  text-align: center;
  background: linear-gradient(#4d545e, #425269);
  border: 1px solid #e9e9e9;
  border-radius: 15px;
  font-size: 20px;
  font-weight: 300;
  margin: 0 10px 20px 10px;
  cursor: pointer;
}

.Answer:hover {
  background: rgba(176, 159, 130, 0.5);
}

.Answer.active {
  background: rgba(176, 159, 130, 0.8);
}

.Answer.correct {
  animation: correct 3s ease forwards;
}

@keyframes correct {
  0%,
  22%,
  42% {
    background: rgba(176, 159, 130, 0.8)
  }
  20%,
  40%,
  60% {
    background: linear-gradient(#4d545e, #425269);
  }
  62%,
  100% {
    background: rgb(64, 145, 64);
  }
}

.Answer.incorrect {
  animation: incorrect 3s ease forwards;
}

@keyframes incorrect {
  0%,
  22%,
  42% {
    background: rgba(176, 159, 130, 0.8)
  }
  20%,
  40%,
  60% {
    background: linear-gradient(#4d545e, #425269);
  }
  62%,
  100% {
    background: rgb(208, 76, 76);
  }
}

.LevelsContainer {
  width: 25%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.Levels {
  list-style: none;
  width: 100%;
  padding: 20px;
}

.LevelsItem {
  display: flex;
  align-items: center;
  padding: 10px;
  border-radius: 5px;
}

.LevelsItem.active {
  background-color: rgba(176, 159, 130, 0.5);
}

.LevelsItemNumber {
  font-size: 18px;
  font-weight: 100;
  width: 30%;
}

.LevelsItemAmount {
  font-size: 20px;
  font-weight: 300;
}

